    includes hyphen-minus, forward slash and underscore as intended
  (fd.o #99825, #100686; Simon McVittie)

Fixes:

• Don't put timestamps in the Doxygen-generated documentation,
  or hard-code the build directory into builds with embedded tests,
  for reproducible builds (fd.o #100692, Simon McVittie)

• Fix some integration test issues (fd.o #100686, Simon McVittie)

D-Bus 1.11.12 (2017-04-07)
==

The “it's something humans do” release.

Enhancements:

• The session dbus-daemon now supports transient .service files
  in $XDG_RUNTIME_DIR/dbus-1/services. Unlike the other standard
  service directories, this directory is not monitored with inotify
  or similar, and the service files must be named exactly
  ${bus_name}.service. (fd.o #99825, Simon McVittie)

• dbus can be configured with --enable-relocation when building with
  Autotools, or with -DDBUS_RELOCATABLE=ON when building with cmake,
  to make the pkg-config metadata relocatable. This is useful for
  non-standard prefixes, and in particular for Windows installations.
  However, it is not recommended for system-wide installations into
  /usr, because it interferes with pkg-config's ability to filter out
  compiler default linker directories.

  With Autotools, the default is --enable-relocation when building
  for Windows or --disable-relocation otherwise. With CMake, the default
  is -DDBUS_RELOCATABLE=ON.

  (fd.o #99721; Ralf Habacker, Simon McVittie)

• Users of CMake ≥ 2.6 can now link to libdbus without providing their
  own FindDBus.cmake macros, whether dbus was compiled with Autotools
  or with CMake. See the end of README.cmake for more information.
  (fd.o #99721; Ralf Habacker, Simon McVittie)

Fixes:

• Always read service file directories in the intended order
  (fd.o #99825, Simon McVittie)

• When tests are skipped, don't try to kill nonexistent process 0
  (fd.o #99825, Simon McVittie)

• Avoid valgrind false positives (fd.o #88808, Philip Withnall)
